--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -2,11 +2,13 @@ name: Pull Request
 
 on:
   pull_request:
-    branch: [ "main" ]
+    branches: [ main ]
 
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
