--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,7 +54,7 @@ jobs:
           go-version: '1.23'
 
       - name: Build
-        uses: make build-linux-amd64
+        run: make build-linux-amd64
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -78,7 +78,7 @@ jobs:
           go-version: '1.23'
 
       - name: Build
-        uses: make build-linux-arm64
+        run: make build-linux-arm64
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
