--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,7 +55,7 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: gotail-amd64
+          name: gotail-linux-amd64
           path: bin/gotail-linux-amd64
           retention-days: 1
   
@@ -79,7 +79,7 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: gotail-arm64
+          name: gotail-linux-arm64
           path: bin/gotail-linux-arm64
           retention-days: 1
 
