--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: gotail-amd64
+          name: gotail-linux-amd64
           path: bin/gotail-linux-amd64
           retention-days: 1
   
@@ -74,7 +74,7 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: gotail-arm64
+          name: gotail-linux-arm64
           path: bin/gotail-linux-arm64
           retention-days: 1
 
@@ -90,13 +90,13 @@ jobs:
       - name: Download artifacts for linux amd64
         uses: actions/download-artifact@v4
         with:
-          name: gotail-amd64
+          name: gotail-linux-amd64
           path: bin/gotail-linux-amd64
 
       - name: Download build artifacts for linux arm64
         uses: actions/download-artifact@v4
         with:
-          name: gotail-arm64
+          name: gotail-linux-arm64
           path: bin/gotail-linux-arm64
 
       - name: Create Release
@@ -110,10 +110,10 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ steps.release.outputs.tag_name }} bin/gotail-linux-amd64
+        run: gh release upload ${{ steps.release.outputs.tag_name }} ./bin/gotail-linux-amd64/gotail-linux-amd64
 
       - name: Upload artifact linux arm64
         if: ${{ steps.release.outputs.release_created }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ steps.release.outputs.tag_name }} bin/gotail-linux-arm64
+        run: gh release upload ${{ steps.release.outputs.tag_name }} ./bin/gotail-linux-arm64/gotail-linux-arm64
