--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -2,11 +2,13 @@ name: Pull Request
 
 on:
   pull_request:
-    branch: [ "main" ]
+    branches: [ main ]
 
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -15,21 +17,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
-      
-      - name: Test
-        run: go test -v ./...
 
-      - name: Check formatting
-        run: |
-          unformatted=$(gofmt -l .)
-          if [ -n "$unformatted" ]; then
-            echo "The following files are not formatted:"
-            echo "$unformatted"
-            exit 1
-          fi
+      - name: Check format
+        run: gofmt -d ./
 
-      - name: Run golangci-lint
-        run: golangci-lint run --max-warnings=0
+      - name: Lint
+        run: go vet ./...
 
       - name: Run tests
         run: go test -v ./...
