fix(build): add missing trigger paths to the main pipeline

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,9 +4,10 @@ on:
     branches: [ main ]
     paths:
       - '.github/**'
-      - 'cmd/**'
-      - 'internal/**'
+      - '**.go'
       - 'go.mod'
+      - 'Makefile'
+      - 'version.txt'
 
 permissions:
   contents: write
