ci(release): update release notes filtering on .goreleaser.yaml to exclude additional commit types

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -56,7 +56,10 @@ changelog:
   sort: asc
   filters:
     exclude:
-      - "^chore"
       - "^build"
-      - "^docs:"
-      - "^test:"
+      - "^ci"
+      - "^chore"
+      - "^docs"
+      - "^refactor"
+      - "^style"
+      - "^test"
