ci(release): update release tag in version.txt

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,6 +29,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set version file
+        run: echo "${{ github.ref_name }}" > version.txt
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
