chore: fix dependencies between tasks on taskfile for automated local installation

--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -29,12 +29,12 @@ tasks:
 
   build:
     desc: Build binary for current platform
+    deps: [check-go, test]
     cmds:
       - task: build-{{OS}}-{{ARCH}}
 
   build-linux-amd64:
     desc: Build binary for Linux AMD64
-    deps: [check-go]
     cmds:
       - echo "Building linux amd64 binary..."
       - CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags "-X github.com/borisdvlpr/gotail/cmd.version={{.VERSION}}" -o {{.BINARY_NAME}}-linux-amd64 {{.MAIN_PATH}}
@@ -42,7 +42,6 @@ tasks:
 
   build-linux-arm64:
     desc: Build binary for Linux ARM64
-    deps: [check-go]
     cmds:
       - echo "Building linux arm64 binary..."
       - CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -ldflags "-X github.com/borisdvlpr/gotail/cmd.version={{.VERSION}}" -o {{.BINARY_NAME}}-linux-arm64 {{.MAIN_PATH}}
@@ -50,7 +49,6 @@ tasks:
 
   build-darwin-arm64:
     desc: Build binary for macOS ARM64
-    deps: [check-go]
     cmds:
       - echo "Building macOS arm64 binary..."
       - CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build -ldflags "-X github.com/borisdvlpr/gotail/cmd.version={{.VERSION}}" -o {{.BINARY_NAME}}-macos-arm64 {{.MAIN_PATH}}
@@ -58,6 +56,7 @@ tasks:
 
   install:
     desc: Install binary to local path
+    deps: [build]
     cmds:
       - echo "Installing gotail on $HOME/.local/bin..."
       - mkdir -p $HOME/.local/bin
@@ -94,6 +93,5 @@ tasks:
 
   all:
     desc: Build and install the application
-    deps: [build]
     cmds:
       - task: install
